[B]1.1.3[/B]
- various fixes due to site changes

[B]1.1.2[/B]
- fixed missing poster (due to site changes)

[B]1.1.1[/B]
- use search results pre-sorted by popularity

[B]1.1.0[/B]
- better results if searching with year appended
- removed dupe fanart expression

[B]1.0.9[/B]
- changed to use chain function to get fanart from tmdb

[B]1.0.8[/B]
- added new icon

[B]1.0.6[/B]
- added Hungarian translation

[B]1.0.5[/B]
- fixed missing ratings

[B]1.0.4[/B]
- return numeric runtime/duration values

[B]1.0.1-3[/B]
- added production countries
- internal tests

[B]1.0.0[/B]
- Initial import into addons repository