@@ -15,8 +15,8 @@
 	</CreateSearchUrl>
 	<GetSearchResults dest="8">
 		<RegExp input="$$5" output="&lt;?xml version=&quot;1.0&quot; encoding=&quot;iso-8859-1&quot; standalone=&quot;yes&quot;?&gt;&lt;results&gt;\1&lt;/results&gt;" dest="8">
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2&lt;/title&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url&gt;http://www.videobuster.de\1.html?tab=details&lt;/url&gt;&lt;/entity&gt;" dest="5+">
-				<expression repeat="yes">&lt;a href=&quot;([^&quot;]*)&quot; class=&quot;movietip_yes&quot;&gt;([^&lt;]*)&lt;/a&gt;.*?&lt;label&gt;Produktion:&lt;/label&gt;.*?([0-9]+)&lt;/div&gt;</expression>
+			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\1&lt;/title&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url&gt;http://www.videobuster.de\2&lt;/url&gt;&lt;/entity&gt;" dest="5+">
+				<expression repeat="yes">class=&quot;movietip_yes&quot;&gt;([^&lt;]*)&lt;/a&gt;.*?&lt;a class=&quot;more&quot; href=&quot;([^&quot;]*)&quot;&gt;.*?&lt;label&gt;Produktion:&lt;/label&gt;.*?([0-9]+)&lt;/div&gt;</expression>
 			</RegExp>
 			<expression noclean="1"/>
 		</RegExp>
