@@ -1,3 +1,6 @@
+[B]1.1.4[/B]
+- fixed incomplete details due to site changes
+
 [B]1.1.3[/B]
 - various fixes due to site changes
 
